added jQuery 1.11 with bower

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "angular": "~1.2.20",
-    "angular-ui-router": "~0.2.10"
+    "angular-ui-router": "~0.2.10",
+    "jquery": "https://github.com/components/jquery.git#1.11"
   }
 }
