small improvements: Hotkeys and css changes

--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "angular": "~1.2.20",
     "angular-ui-router": "~0.2.10",
-    "jquery": "https://github.com/components/jquery.git#1.11"
+    "jquery": "https://github.com/components/jquery.git#1.11",
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.3"
   }
 }
